WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313387
WebGL: compressedTexImage does not check if the texture format has been enabled
https://bugs.webkit.org/show_bug.cgi?id=313387
Summary
WebGL: compressedTexImage does not check if the texture format has been enabled
Kimmo Kinnunen
Reported
2026-04-26 22:47:44 PDT
webgl/2.0.y/conformance2/textures/misc/compressed-tex-image.html fails WebGL: compressedTexImage does not check if the texture format has been enabled
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-26 22:47:50 PDT
<
rdar://problem/175652171
>
Kimmo Kinnunen
Comment 2
2026-04-26 23:13:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63662
EWS
Comment 3
2026-04-27 22:58:26 PDT
Committed
312180@main
(856e4464ec42): <
https://commits.webkit.org/312180@main
> Reviewed commits have been landed. Closing PR #63662 and removing active labels.
EWS
Comment 4
2026-05-17 14:23:47 PDT
Committed
305877.514@webkitglib/2.52
(093e61a7cc73): <
https://commits.webkit.org/305877.514@webkitglib/2.52
> Reviewed commits have been landed. Closing PR #65070 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug